k8s/prod/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: starroll
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
