k8s/prod/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starroll-ingress
  namespace: starroll
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "starroll"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - hosts:
        - starroll.ie
      secretName: ssl-secret
  rules:
    - host: "starroll.ie"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: console-service
                port:
                  number: 8000
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
